# swapllm

./: LICENSE  README.md  SPEC.md  pyproject.toml
swapllm/: __init__.py  _normalize.py  exceptions.py  router.py
swapllm/providers/: __init__.py  anthropic.py  base.py  groq.py  openai.py
tests/: test_anthropic_provider.py  test_groq_provider.py  test_openai_provider.py  test_provider_parity.py  test_router.py
