[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swapllm"
version = "0.1.0"
description = "Swap between LLM providers (Groq, OpenAI, Anthropic) through one interface, with automatic fallback and optional schema validation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Holden Walker Anderson"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Pydantic v2 is a deliberate version floor, not an accident: v2's validation
    # core (pydantic-core / Rust) and model API (model_validate, etc.) are not
    # wire-compatible with v1, and the schema-validation feature in SPEC.md §3-4
    # is written against v2 semantics.
    "pydantic>=2,<3",
    "groq>=1,<2",
    "openai>=1,<3",
    "anthropic>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/HWalker13/swapllm"
Repository = "https://github.com/HWalker13/swapllm"
Issues = "https://github.com/HWalker13/swapllm/issues"

[tool.setuptools.packages.find]
include = ["swapllm*"]
